--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
       font-weight: bold;
       margin-bottom: 5px;
     }
+
+    /*
+     * Layout helpers for the top action buttons.  These classes group the three
+     * preset actions (save, copy all and reset) together near the top of the
+     * page and arrange them horizontally.  Each group contains the primary
+     * button and its descriptive caption stacked vertically.  The flex
+     * container allows the groups to sit side‑by‑side and wrap on narrow
+     * screens.
+     */
+    .top-buttons {
+      display: flex;
+      gap: 20px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      margin: 20px 0;
+    }
+    .button-group {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
   </style>
 </head>
 <body>
@@ -75,6 +96,25 @@
   <label for="gtmId">Enter your GTM Container ID:</label><br>
   <input type="text" id="gtmId" placeholder="GTM-XXXXXXX" />
   <button onclick="loadGTM()">Inject GTM</button>
+
+  
+  <!-- Top action buttons: save, copy all and reset.  These were previously
+       located beneath the presets section but have been moved here for
+       quicker access.  Each button is accompanied by a short description. -->
+  <div class="top-buttons">
+    <div class="button-group">
+      <button onclick="savePresets()">💾 Save Changes to localStorage</button>
+      <p style="margin-top: 0; color: gray;">Gem ændringer, så de bevares ved reload.</p>
+    </div>
+    <div class="button-group">
+      <button onclick="copyAllAsDataLayer()">📋 Copy ALL as datalayer.js file</button>
+      <p style="margin-top: 0; color: gray;">Kopierer alle events i formatet klar til <code>datalayer.js</code>.</p>
+    </div>
+    <div class="button-group">
+      <button onclick="resetPresets()">♻️ Reset and use datalayer.js</button>
+      <p style="margin-top: 0; color: gray;">Fjerner gemte events og henter igen fra <code>datalayer.js</code>.</p>
+    </div>
+  </div>
 
   <hr>
 
@@ -97,12 +137,8 @@ dataLayer.push({
 
   <div class="label">Test Events (editable in <code>datalayer.js</code>)</div>
   <div id="presetsArea"></div>
-  <button onclick="savePresets()">💾 Save Changes to localStorage</button>
-<p style="margin-top: 0; color: gray;">Gem ændringer, så de bevares ved reload.</p>
-<button onclick="copyAllAsDataLayer()">📋 Copy ALL as datalayer.js file</button>
-<p style="margin-top: 0; color: gray;">Kopierer alle events i formatet klar til <code>datalayer.js</code>.</p>
-<button onclick="resetPresets()">♻️ Reset and use datalayer.js</button>
-<p style="margin-top: 0; color: gray;">Fjerner gemte events og henter igen fra <code>datalayer.js</code>.</p>
+  <!-- The preset action buttons have been moved to the top of the page.  The
+       original buttons and descriptions were removed from this location. -->
 
   <script src="datalayer.js"></script>
 <script>
