--- a/index.html
+++ b/index.html
@@ -70,33 +70,40 @@
     .small-button:hover {
       background-color: #d4dadd;
     }
-    /* Each group of preset controls is laid out as a card with a
-       subtle shadow and rounded corners. */
+    /*
+       Preset event card styling.  Each event is a card with a grey
+       header bar containing the event name and action buttons.  The
+       textarea aligns with the header and occupies the rest of the
+       card. */
     .preset-wrapper {
-      display: flex;
-      gap: 20px;
-      align-items: flex-start;
-      margin-bottom: 20px;
       border: 1px solid #eceff3;
       border-radius: 4px;
-      padding: 15px;
       background: #fff;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+      margin-bottom: 20px;
     }
-    .preset-buttons {
+    .preset-header-bar {
       display: flex;
-      flex-direction: column;
-      flex-shrink: 0;
-      margin-top: 0;
+      justify-content: space-between;
+      align-items: center;
+      background: #f5f7fa;
+      border-bottom: 1px solid #eceff3;
+      padding: 12px 16px;
+      font-weight: 600;
     }
-
-    /* Add spacing between buttons in each preset */
-    .preset-buttons button + button {
-      margin-top: 8px;
+    .preset-header-title {
+      font-size: 16px;
     }
-    .preset-textarea {
-      flex: 1;
-      min-height: 100px;
+    .preset-header-actions button {
+      margin-left: 10px;
+    }
+    .preset-wrapper textarea {
+      border: none;
+      border-radius: 0 0 4px 4px;
+      padding: 12px 16px;
+      min-height: 120px;
+      resize: vertical;
+      width: 100%;
     }
     /* Headings use a modern size/weight and extra spacing around
        sections. */
@@ -104,11 +111,6 @@
       font-weight: 600;
       margin: 40px 0 15px;
       font-size: 28px;
-    }
-    .preset-header {
-      font-size: 18px;
-      font-weight: 600;
-      margin-bottom: 6px;
     }
     /* Log output adopts a card-like style similar to presets. */
     .log {
@@ -130,10 +132,10 @@
      * screens.
      */
     .top-buttons {
-      display: flex;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
       align-items: flex-start;
-      flex-wrap: wrap;
       margin: 20px 0;
     }
     .button-group {
@@ -148,33 +150,11 @@
      * and action buttons.  The textarea occupies the remainder of
      * the card without its own border, giving a cohesive look.
      */
+    /* The playground section inherits card styles from .preset-wrapper.
+       Only a larger bottom margin is applied here to separate it
+       visually from the navigation and test events. */
     .custom-js-section {
-      border: 1px solid #eceff3;
-      border-radius: 4px;
-      background: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
       margin-bottom: 40px;
-    }
-    .custom-js-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #f5f7fa;
-      border-bottom: 1px solid #eceff3;
-      padding: 12px 16px;
-      font-weight: 600;
-      font-size: 20px;
-    }
-    .custom-js-actions button {
-      margin-left: 10px;
-    }
-    .custom-js-section textarea {
-      border: none;
-      border-radius: 0 0 4px 4px;
-      padding: 12px 16px;
-      min-height: 120px;
-      resize: vertical;
-      width: 100%;
     }
 
     /*
@@ -236,13 +216,16 @@
 
   <hr>
 
-  <!-- Modernised custom JS section inspired by GTM UI -->
-  <div class="custom-js-section">
-    <div class="custom-js-header">
-      <span>Free custom JS</span>
-      <div class="custom-js-actions">
-        <button onclick="runCustom()">Run JS</button>
-        <button class="small-button" onclick="copyCustom()">Copy</button>
+  <!-- dataLayer Playground: behaves like a preset card with its own header
+       and actions.  Users can experiment with custom code and push it
+       to the dataLayer or copy it in various formats. -->
+  <div class="custom-js-section preset-wrapper" data-ignore-nav="true">
+    <div class="preset-header-bar">
+      <span class="preset-header-title">dataLayer Playground</span>
+      <div class="preset-header-actions">
+        <button onclick="runCustom()">Push</button>
+        <button class="small-button" onclick="copyCustom()">Copy as dataLayer.push</button>
+        <button class="small-button" onclick="copyCustomDL()">Copy as datalayer.js block</button>
       </div>
     </div>
     <textarea id="customJson" rows="6">// Example:
@@ -309,6 +292,19 @@ dataLayer.push({
     log('📋 Copied custom JS');
   }
 
+  // Copy the custom JS from the playground as a datalayer.js block.  A
+  // generic name is assigned since the playground code does not have
+  // an explicit event name.
+  function copyCustomDL() {
+    const textarea = document.getElementById('customJson');
+    const code = textarea.value;
+    const name = 'custom_js';
+    const fullBlock = `// ===== START ${name} =====  \n{\n  name: "${name}",\n  code: \`${code}\`\n},\n// ===== END ${name} =====`;
+    navigator.clipboard.writeText(fullBlock).then(() => {
+      log('📋 Copied custom JS as datalayer.js block');
+    });
+  }
+
   function log(msg) {
     document.getElementById('logOutput').textContent = msg;
     console.log(msg);
@@ -333,85 +329,90 @@ dataLayer.push({
   }
 
   function renderPreset(preset, index) {
-  const wrapper = document.createElement('div');
-  wrapper.className = 'preset-wrapper';
+    const wrapper = document.createElement('div');
+    wrapper.className = 'preset-wrapper';
 
-  const buttons = document.createElement('div');
-  buttons.className = 'preset-buttons';
+    // Build a header bar containing the event title and action buttons
+    const header = document.createElement('div');
+    header.className = 'preset-header-bar';
 
-  const runBtn = document.createElement('button');
-  runBtn.textContent = 'Push';
+    const title = document.createElement('span');
+    title.className = 'preset-header-title';
+    const eventName = preset.name || `custom_${index + 1}`;
+    title.textContent = eventName;
 
-  const copyBtn = document.createElement('button');
-  copyBtn.textContent = 'Copy as dataLayer.push';
-  copyBtn.className = 'small-button';
+    const actions = document.createElement('div');
+    actions.className = 'preset-header-actions';
 
-  const copyDLBtn = document.createElement('button');
-  copyDLBtn.textContent = 'Copy as datalayer.js block';
-  copyDLBtn.className = 'small-button';
+    // Primary action: push/run the event code
+    const runBtn = document.createElement('button');
+    runBtn.textContent = 'Push';
 
-  const label = document.createElement('div');
-  label.className = 'preset-header';
-  label.textContent = 'Event: ' + (preset.name || `custom_${index + 1}`);
+    // Secondary actions: copy as dataLayer.push and as datalayer.js block
+    const copyBtn = document.createElement('button');
+    copyBtn.textContent = 'Copy as dataLayer.push';
+    copyBtn.className = 'small-button';
 
-  const textarea = document.createElement('textarea');
-  textarea.className = 'preset-textarea';
-  textarea.dataset.index = index;
-  textarea.dataset.name = preset.name || `custom_${index + 1}`;
-  textarea.value = preset.code;
-  textarea.rows = 10;
+    const copyDLBtn = document.createElement('button');
+    copyDLBtn.textContent = 'Copy as datalayer.js block';
+    copyDLBtn.className = 'small-button';
 
-  runBtn.onclick = () => {
-    try {
-      new Function(textarea.value)();
-      log(`✅ Executed: ${label.textContent}`);
-    } catch (e) {
-      log('❌ Error parsing JS: ' + e.message);
-    }
-  };
+    // Attach click handlers
+    const textarea = document.createElement('textarea');
+    textarea.dataset.index = index;
+    textarea.dataset.name = eventName;
+    textarea.value = preset.code;
+    textarea.rows = 10;
 
-  copyBtn.onclick = () => {
-    textarea.select();
-    document.execCommand('copy');
-    log('📋 Copied as dataLayer.push');
-  };
-
-  copyDLBtn.onclick = () => {
-    const name = textarea.dataset.name || `custom_${index + 1}`;
-    const fullBlock = 
+    runBtn.onclick = () => {
+      try {
+        new Function(textarea.value)();
+        log(`✅ Executed: ${eventName}`);
+      } catch (e) {
+        log('❌ Error parsing JS: ' + e.message);
+      }
+    };
+    copyBtn.onclick = () => {
+      textarea.select();
+      document.execCommand('copy');
+      log('📋 Copied as dataLayer.push');
+    };
+    copyDLBtn.onclick = () => {
+      const name = textarea.dataset.name || `custom_${index + 1}`;
+      const fullBlock = 
 `// ===== START ${name} =====  
 {
   name: "${name}",
   code: \`${textarea.value}\`
 },
 // ===== END ${name} =====`;
-    navigator.clipboard.writeText(fullBlock).then(() => {
-      log('📋 Copied as datalayer.js block');
-    });
-  };
+      navigator.clipboard.writeText(fullBlock).then(() => {
+        log('📋 Copied as datalayer.js block');
+      });
+    };
 
-  buttons.appendChild(runBtn);
-  buttons.appendChild(copyBtn);
-  buttons.appendChild(copyDLBtn);
+    actions.appendChild(runBtn);
+    actions.appendChild(copyBtn);
+    actions.appendChild(copyDLBtn);
 
-  const container = document.createElement('div');
-  container.style.flex = '1';
-  container.appendChild(label);
-  container.appendChild(textarea);
+    header.appendChild(title);
+    header.appendChild(actions);
 
-  wrapper.appendChild(buttons);
-  wrapper.appendChild(container);
-  return wrapper;
-}
+    // Assign dataset for nav generation
+    textarea.className = 'preset-textarea';
+
+    wrapper.appendChild(header);
+    wrapper.appendChild(textarea);
+    return wrapper;
+  }
 
 
   function savePresets() {
     const all = document.querySelectorAll('.preset-textarea');
     const updated = Array.from(all).map((el) => {
-      const wrapper = el.closest('.preset-wrapper');
-      const label = wrapper.querySelector('.preset-header').textContent;
-      const name = label.replace('Event: ', '').trim();
-
+      // Use the dataset attribute on the textarea to determine the
+      // event name rather than parsing from a header.
+      const name = el.dataset.name || '';
       return {
         name: name,
         code: el.value
@@ -479,10 +480,11 @@ dataLayer.push({
     nav.innerHTML = '';
     const wrappers = document.querySelectorAll('.preset-wrapper');
     wrappers.forEach((wrapper) => {
-      const header = wrapper.querySelector('.preset-header');
-      if (!header) return;
-      const rawName = header.textContent.replace('Event:', '').trim();
-      const name = rawName.startsWith('Event') ? rawName : rawName;
+      // Skip wrappers flagged to be ignored by the navigation bar
+      if (wrapper.getAttribute('data-ignore-nav') === 'true') return;
+      const titleEl = wrapper.querySelector('.preset-header-title');
+      if (!titleEl) return;
+      const name = titleEl.textContent.trim();
       const id = 'event_' + slugify(name);
       wrapper.id = id;
 
